--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
   material_design_icons_flutter: 7.0.7296
   curved_navigation_bar: ^1.0.3
-  firebase_core: ^2.27.0
+  firebase_core: ^2.31.0
   firebase_auth: ^4.16.0
   modal_progress_hud_nsn: ^0.5.1
-  flutter_map: ^0.14.0
+  flutter_map: ^6.1.0
   geojson: ^1.0.0
   flutter_bloc: ^8.1.5
   shared_preferences: ^2.2.3
-  http: ^0.13.6
+  http: ^1.2.1
 
 
 
@@ -78,6 +79,7 @@ flutter:
      - lib/assets/assets_images/doctor3.jpg
      - lib/assets/assets_images/doctor4.jpg
      - lib/assets/assets_images/doctors.png
+     - lib\assets\assets_images\User1.jpg
      - lib/assets/assets_images/medicService.jpg
      - assets/medical_staff.jpeg
      - assets/appIcon.png
