--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,14 @@ dependencies:
   
   material_design_icons_flutter: 7.0.7296
   curved_navigation_bar: ^1.0.3
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.16.0
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
   modal_progress_hud_nsn: ^0.5.1
-  flutter_map: ^0.14.0
+  flutter_map: 7.0.1
   geojson: ^1.0.0
   flutter_bloc: ^8.1.5
   shared_preferences: ^2.2.3
-  http: ^0.13.6
+  http: ^1.2.1
 
 
 
